# lecture-mcp-server

./: .env.example  README.md  pyproject.toml  pytest.ini  requirements.md  run.py  tasks.md  test.py
.github/workflows/: ci.yml
app/: main.py  mcp_server.py
app/api/: health.py  mcp.py
app/core/: config.py  logging.py
app/mcp_tools/: base.py  filter_content.py  pdf_to_text.py  text_to_markdown.py  tools.py
app/models/: mcp.py  pdf.py  responses.py
app/prompts/: filter_content.md  text_to_markdown.md
app/services/: chunking_service.py  gemini_client.py  mcp_registry.py  pdf_service.py  token_counter.py
app/tools/: base.py  filter_content.py  pdf_to_text.py  process_document.py  text_to_markdown.py
app/utils/: file_utils.py  token_counter.py
docs/: requirements.md  tasks.md
sse_agent/: agent.py
tests/: conftest.py
tests/mcp_tools/: test_filter_content.py  test_pdf_to_text.py  test_text_to_markdown.py
