[project]
name = "lecture-mcp-server"
version = "0.2.0"
description = "MCP Server for PDF lecture processing with Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.120.4",
    "google-genai>=1.47.0",
    "pdfplumber>=0.11.7",
    "pydantic-settings>=2.11.0",
    "pypdf2>=3.0.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "isort>=5.10.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "reportlab>=4.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
